version lifted up to 1.2.0